Cyberdyne/css/mainstyle.css
html {
    position: relative;
    min-height: 100%;
}

body {
    background-image: url('../Cyberdyne background.jpg');
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    margin-bottom: 150px;
}
#header, .container , #footer {  
    display: block;  
    padding: 10px;
}
    
#header p {
    color: white;
}

#header {
margin-bottom: 5px;
}

#footer {
    overflow: hidden;
    color:  white;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: max-content;
}

.container {
    margin-top: -20px;
    min-height: 450px;
}

.container > .col-md-12, .col-md-6 > div {
    /*border-radius:  10px;  
    border: 2px solid #292929; */
    margin-bottom: 20px; 
    background-color: rgba(0,0,80,0.5);
    color:  white;
}

.left {
    float: left;
}

.left > ul {
    list-style-type: none;
    list-style-position:inside;
    margin:0;
    padding:0;
}

span#title{
    color:  white;
    font-size: 40px;
}

@media screen and (min-width:768px)
{
    .right {
    float: right;
    width: 50%;
    }
    #myNavbar {
        position: relative;
    }

    #myNavbar .nav{
        position: absolute; 
        bottom: 0;   
    }

    #myNavbar #navLeft {
    left:  120px;
    }
    #myNavbar #navRight {
    right:  0;
    }
}
.navbar #navRight {
    margin-right: -13px;
}
.navbar #navRight > li {
    background: linear-gradient(rgba(248,80,50,0.8),rgba(248,80,50,0.4));
    font-size: 20px; 
    border-top-left-radius: 5px;
    border-left: 2px outset #9D9D9D;
    border-top:  2px outset #9D9D9D;
    margin-right: -2px;
    padding: 3px
}

.navbar #navRight > li > a {
    color: #9D9D9D;
}

.navbar #navRight > li > a:hover {
    color: white;
}

.gallery a:hover{
    text-decoration: none;
    text-decoration-color: none;
}

.gallery h2 {
    text-align: center;
    font-size:  30px;
    color: white;
    padding-top: 40%;
    padding-bottom: 10px;
    background: linear-gradient(rgba(9,0,0,0),rgba(9,0,0,0.9));
    margin: 0px;
    margin-top: 40%;
    
}

.gallery {
    background-repeat: no-repeat;
    background-size: cover;
    border: 1px solid black;
    margin-top: 20px;
    margin-bottom: 20px;
}

#mainphoto {
    margin-top: 20px;
    margin-bottom: 10px;
}

@media screen and (max-width: 470px) {
    .gallery h2 {
    font-size: 30px;
}
input[type="text"], input[type="password"], #robotText {
    width: 50%;
}

    #mainphoto {
        width: 200px;
    }
.gallery h2 {
    font-size: 15px;
}
.gallery h2 span {
   margin-top: -10px;
}

.box-title {
    font-size:  18px;
}
}

@media screen and (min-width: 480px) and (max-width: 991px) {
    .gallery {
    background-size: 350px, auto;
    background-size: cover;
    background-position-x:  center;
}
#navLeft li {
   margin-left: -10px;
   margin-right: -10px; 
}
    .gallery h2 {
    padding-top: 20%;
    margin-top: 20%;
}

    input[type="text"], input[type="password"], #robotText {
    min-width: 300px;
    max-width: 375px;
    }
.well {
    color:  black;
    min-height: 175px;
}

}
@media screen and (min-width: 991px) {

input[type="text"], input[type="password"], #robotText {
    min-width: 500px;
}
input[type="text"].form-width-override {
    min-width: 0px;
}
.table{    
    margin: 0 20px 0 20px;
}
}

.carousel-inner > .item > img,
  .carousel-inner > .item > a > img {
      width: 250px;
      margin: auto;
  }

#photos {
    text-align: center;
}

.carousel-control.left, .carousel-control.right {
    background-image: none
}

#footer a:hover {
    color:  white;
    text-decoration: none;
}

#counter, #counter2 {
    background-color: rgba(0,0,0,0);
    border:  none;
    color: white;
}

th {
    color: #292929;
}

.table {
    color:  black;
}

label {
    font-size: 24px;
}

#required {
    font-size: 14px;
    font-style: italic;
}

.robotBtn, .editBtn {
    font-size: 12px;
    width: max-content;
    margin-bottom: 10px;
}

.robotBtn a, .editBtn a {
    color:  white;
}

.inline {
    display: inline;
}

.featured_img, .robotimg {
    max-height: 450px;
    width: auto;
    display: inline-block;
    border:  none;  
    position: relative;
    background: linear-gradient(rgba(9,0,0,0.9),rgba(9,0,0,0));  
}   

.gradient {
    background: linear-gradient(rgba(9,0,0,0.9),rgba(9,0,0,0));
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: 1;
}

.featured_img img, .robotimg img {
  position:relative;
  border:  1px solid black;
  display: block;
  max-height: 450px;
}

.featured_img img {
      z-index:-1;   
}

.homeGallery {
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;   
}

.featured_text p {
    padding-left: 25px;
    padding-right: 5px;
    word-wrap: break-word;
    padding-bottom: 5px;
}

.featured_text p a{
    color:  #9D9D9D;
}

.box-title{
    padding-top: 12px;
    padding-left: 20px;
    padding-bottom: 12px;
    background: linear-gradient(to right,rgba(9,0,0,0.6),rgba(9,0,0,0.1));
}

.floatBtn {
    width:  max-content;
    text-align: center;
    min-width: 110px;
}


.non-feat-glyph {
    float: left;
    padding-left: 20px;
    padding-top: 9px;
    font-size: 18px;
}

.col-md-3 a:hover {
    text-decoration: none;
}

#addRemove {
   display: inline;
}

.well {
    color:  black;
}

.box-padding {
    padding-bottom: 10px;
}
.content-padding {
    padding-left: 15px;
    padding-right: 15px;
    width:100%;
    max-width: 500px;
    height:100%;
    margin:0 auto;
    border:  none;
}

.robot-title{
    padding-top: 12px;
    padding-bottom: 12px;
    background: linear-gradient(to right,rgba(9,0,0,0.2), rgba(9,0,0,0.7),rgba(9,0,0,0.2));
    text-align: center;
    font-size: 45px;
}

input[type="radio"] {
    display: inline;
    height: 15px;
    width: 15px;
    margin-top: 85px;
}

.tab {
    background-color: #cdcdcd;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.tab-content img {
    width: 200px;
    margin: 10px 0px;
}

.radio-inline {
    width: 235px;
    margin-bottom: 10px;
    height:  225px;
}
.radio-inline span {
    width:  225px;
    height: 225px;
    display: table-cell;
    vertical-align: middle;
}

.radio-inline img {
    max-width:  200px;
}

.tab-content {
    margin-bottom: 20px;
}

.file-upload input {
    font-size:  14px;
    font-weight: bold;
    margin-bottom: 5px;
}

.file-upload-buttons a {
    color:  white;
}

.file-upload-buttons {
    margin-bottom: 10px;
}

.form-control{
    display: inline-block;
}

.margin-btw {
    margin-bottom: 16px;
}
.h_iframe {
    position:relative;
    padding-top: 56%;
}
.h_iframe iframe {
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
}

.footer li {
    list-style-type: none;
}

.footer .form-control {
    margin-bottom: 5px;
}

.footer .glyphicon {
    margin-right: 5px;
}

